try fix on mobile nav

--- a/src/global.scss
+++ b/src/global.scss
@@ -21,8 +21,6 @@
 }
 
 #root {
-  height: 100%;
-
   display: flex;
   flex-direction: column;
 }
@@ -31,7 +29,6 @@ html,
 body {
   margin: 0;
   padding: 0;
-  height: 100%;
   overflow-x: hidden;
 }
 
